# FileWeave

./: README.md  README.pt-br.md  pyproject.toml
fileweave/: app.py  constants.py  main.py
fileweave/ui/: about_dialog.py  main_window.py  menu_bar.py  styles.py
fileweave/utils/: file_utils.py  treeview_utils.py
