[tool.poetry]
name = "fileweave"
version = "0.1.0"
description = "A smart file concatenator for AI analysis"
authors = ["filipemsilv4 <filipemsilva@outlook.com.br>"]
readme = "README.md"
packages = [{include = "fileweave"}]

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fileweave = "fileweave.main:main"